--- a/public/assets/flappy-components/stylesheets/style.css
+++ b/public/assets/flappy-components/stylesheets/style.css
@@ -1,34 +1,154 @@
-body {
-  overflow: hidden;
-  height: 100%;
+/*Variables*/
+:root {
+  --font1: 'Mona Sans';
+  --fontColor: white;
+  --bgColor: rgb(27, 27, 27);
+  --UIBgColor: rgb(30,30,30);
+  --clear: rgba(0,0,0,0);
+  --intermediateColor: rgb(120,120,120);
+  --lightColor: rgb(140,140,140);
+}
+
+@font-face{
+  font-family: 'Mona Sans';
+  src: font-url('resources/Mona-Sans.woff2') format('woff2');
+  font-weight: 600 900;
+  font-stretch: 75% 125%;
+}
+
+html {
+    font-family: var(--font1);
+    color: var(--fontColor);
+    background-color: var(--bgColor);
+}
+
+*:focus {
+  outline: 0 !important;
 }
 
 .configSlider {
-  
+  -webkit-appearance: none;
+  width: 100%;
+  height: .4rem;
+  background-color: var(--intermediateColor);
+  outline: none;
+  transition: background-color .2s;
+}
+
+.configSlider:hover {
+  background-color: var(--lightColor);
+}
+
+.configSlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: .9rem;
+  height: .9rem;
+  background: var(--fontColor);
+  cursor: pointer;
+}
+
+.configSlider::-moz-range-thumb {
+  width: .9rem;
+  height: .9rem;
+  background: var(--fontColor);
+  cursor: pointer;
+}
+
+.configInputWrapper {
+  display: flex;
+  padding: .8rem 1.2rem;
+  border-bottom: 2px solid var(--intermediateColor);
 }
 
 .configButton {
-  
+  font-size: 1.2rem;
+  font-family: var(--font1);
+  outline: 0;
+  padding: .4rem .5rem;
+  border: 2px solid var(--fontColor);
+  background-color: var(--clear);
+  color: var(--fontColor);
+  transition: background-color .1s, color .1s;
+}
+
+.configButton:hover {
+  background-color: var(--fontColor);
+  color: var(--UIBgColor);
+}
+
+.configPropertyTitle {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.configPropertyDesc {
+  font-size: .9rem;
+  font-style: italic;
+  margin-top: .2rem;
+}
+
+.rightSideBorder {
+  border-right: 2px solid var(--intermediateColor);
 }
 
 .configTab {
-  
+  font-size: 1.3rem;
+  font-family: var(--font1);
+  outline: 0;
+  padding: .4rem .5rem;
+  border: none;
+  background-color: var(--clear);
+  color: var(--fontColor);
+  transition: background-color .1s, color .1s;
+}
+
+.configTab:hover {
+  background-color: var(--fontColor);
+  color: var(--UIBgColor);
+}
+
+.configTabSelect {
+  font-size: 1.3rem;
+  font-family: var(--font1);
+  outline: 0;
+  padding: .4rem .5rem;
+  border: none;
+  background-color: var(--fontColor);
+  color: var(--UIBgColor);
 }
 
 .configTabBody {
-  
+  width: 100%;
+  height: 100%;
 }
 
 .tabBar {
-  
+  display: inline-block;
+  white-space: nowrap;
+  width: 100%;
+  overflow-x: auto;
+  border-bottom: 2px solid var(--intermediateColor);
 }
 
 .configBody {
-  
+  width: 100%;
+  bottom: 0px;
+  flex: 1;
+  overflow-y: auto;
 }
 
 .configWindow {
-  
+  position: fixed;
+  width: 37%;
+  height: 35%;
+  right: 3%;
+  bottom: 3%;
+  background-color: var(--UIBgColor);
+  border: 2px solid var(--fontColor);
+  display: flex;
+  flex-flow: column;
+  z-index: 2;
 }
 
 #root {
@@ -37,4 +157,5 @@ body {
 
 canvas {
   position: absolute;
+  z-index: 1;
 }
