pushing so we can have backup in case i messup smth during reorganizing
Co-authored-by: josephwidjaja100 <josephwidjaja100@users.noreply.github.com>

--- a/public/assets/flappy-components/stylesheets/style.css
+++ b/public/assets/flappy-components/stylesheets/style.css
@@ -144,6 +144,12 @@ html {
   z-index: 2;
 }
 
+#pauseBtn, .configWindow {
+  visibility: hidden;
+  opacity: 0%;
+  transition:visibility 0.15s linear,opacity 0.15s linear;
+}
+
 #root {
     display: none;
 }
